<resources>
    <string name="app_name">Pokedex</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="male">male</string>
    <string name="other">other</string>
    <string name="female">female</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="national_number">National Number</string>
    <string name="species">Species</string>
    <string name="pokemon_app">Pokemon App</string>
    <string name="view_data">View Data</string>
    <string name="to_delete_press_and_hold_on_which_you_want_to_delete">To delete press and hold on which you want to delete</string>
</resources>